c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/extra_credit/duplicate_case_in_labeled_switch.c
int main(void) {
    // make sure our validation of switch statements also traverses labeled
    // statements
    int a = 0;
label:
    switch (a) {
        case 1:
        case 1:
            break;
    }
    return 0;
}